# bst-site

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  docker-compose.yml  package.json  repomix-output.txt  repomix.config.json  requirements.txt  turbo.json
.cursor/rules/: design.mdc  frontend.mdc
.github/workflows/: bastion-ci.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: cli.py  main.py
apps/backend/app/agents/: roles.py
apps/backend/app/agents/prompts/: director.md
apps/backend/app/infra/actions/: chem.yaml  docs.yaml  rag.yaml
apps/backend/app/mcp/: client.py  manager.py
apps/backend/app/routes/: agents.py  evidence.py  repo.py  streams.py  tasks.py  workflows.py
apps/backend/app/services/: chem.py  docs.py  models.py  rag.py
apps/backend/app/tools/: __init__.py  local.py
apps/web/: DESIGN_MDC_V04_IMPLEMENTATION.md  PASTEL_BENTO_SOFT_UI_IMPLEMENTATION.md  PRECISION_GLASS_IMPLEMENTATION.md  TRANSPARENT_BENTO_IMPLEMENTATION.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
bst/: cli.py  onchain.py  registry.py  reglint.py
docs/: quickstart.md
examples/hello-world-trial/: README.md  protocol.yaml  run_demo.py
k8s/: api-deployment.yaml  database.yaml  ingress.yaml  namespace.yaml  ui-deployment.yaml
monitoring/: prometheus.yml
scripts/: setup-backend.sh
services/api/: Dockerfile  package.json  tsconfig.json
services/package-registry/: package.json
web/: Dockerfile  eslint.config.mjs  package.json
web/components/: command-menu.tsx  global-header.tsx  (+1 more)
(+162 files in other folders)
