[project]
name = "runix-backend"
version = "0.1.0"
description = "Runix scientific agents backend (FastAPI + OpenAI)"
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "Runix", email = "dev@runix.local" }
]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
runix-backend = "app.main:main"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py310"


